5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1582_1326.log
== SUBMITION (2019-03-24 08:57:09) 
-- CODE:
Sosigenes=40
Jocasta=35
Print(40,35)
-- EXECUTION TIME:
0.133819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 3, in <module>
    Print(40,35)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:57:29) 
-- CODE:
Sosigenes=40
Jocasta=35
Print(40 + 35)
-- EXECUTION TIME:
0.13915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 3, in <module>
    Print(40 + 35)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:57:35) 
-- CODE:
Sosigenes=40
Jocasta=35
Print(40 + 35)
-- EXECUTION TIME:
0.206573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 3, in <module>
    Print(40 + 35)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:57:40) 
-- CODE:
Sosigenes=40
Jocasta=35
Print(40 + 35)

-- EXECUTION TIME:
0.120484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 3, in <module>
    Print(40 + 35)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:58:29) 
-- CODE:
Sosigenes=40
Jocasta=35
40 + 35
-- EXECUTION TIME:
0.176438
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:02:28) 
-- CODE:
Sosigenes=40
Jocasta=35
print("Sosigenes" + "Jocasta")
-- EXECUTION TIME:
0.145363
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
SosigenesJocasta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:02:48) 
-- CODE:
Sosigenes=40
Jocasta=35
print("Sosigenes,Jocasta")
-- EXECUTION TIME:
0.169852
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Sosigenes,Jocasta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:03:14) 
-- CODE:
Sosigenes=40
Jocasta=35
print(Sosigenes + Jocasta)
-- EXECUTION TIME:
0.115946
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
